set up s3 backend store

--- a/env/netbox.env
+++ b/env/netbox.env
@@ -32,3 +32,10 @@ RELEASE_CHECK_URL=https://api.github.com/repos/netbox-community/netbox/releases
 SECRET_KEY='r(m)9nLGnz$(_q3N4z1k(EFsMCjjjzx08x9VhNVcfd%6RF#r!6DE@+V5Zk2X'
 SKIP_SUPERUSER=true
 WEBHOOKS_ENABLED=true
+
+# AWS S3 Storage Configuration
+# TODO:
+AWS_ACCESS_KEY_ID=your-access-key-id
+AWS_SECRET_ACCESS_KEY=your-secret-access-key
+AWS_STORAGE_BUCKET_NAME=your-netbox-bucket
+AWS_S3_REGION_NAME=us-east-1
